--- a/Flask_miniProjects/Flask_requestForm/templates/contact_complete.html
+++ b/Flask_miniProjects/Flask_requestForm/templates/contact_complete.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
   <h2> 문의가 완료되었습니다.</h2> <br>
-  문의 내용 : {{description}}
+  <span>문의 내용 : {{description}}</span>
   <h3> 감사합니다.</h3><br><br>
   <a href="/"> 문의 화면으로 돌아가기 </a>
 </body>
