--- a/Flask_miniProjects/Flask_requestForm/templates/index.html
+++ b/Flask_miniProjects/Flask_requestForm/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>문의폼</title>
+  <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
   <h2>문의 폼</h2><br>
@@ -16,13 +17,13 @@
       </td>
   </tr>
   <tr>
-    <td>메일주소 </td> 
+    <td>메일 주소 </td> 
     <td>
       <input type="text" name="email" value="{{email}}", placeholder="문의내용", required>
     </td>
 </tr>
 <tr>
-  <td>문의내용 </td> 
+  <td>문의 내용 </td> 
   <td>
     <textarea name="description" placeholder="문의내용", required minlength="10">{{description}}</textarea>
   </td>
