문의 폼에서 작성한 메일 smtp모듈을 활용하여 gmail 발송 기능 추가

--- a/Flask_miniProjects/Flask_requestForm/templates/index.html
+++ b/Flask_miniProjects/Flask_requestForm/templates/index.html
@@ -26,7 +26,7 @@
         <tr>
           <td>메일 주소</td>
           <td>
-            <input type="text" name="email" value="{{email}}" , placeholder="문의내용" />
+            <input type="text" name="mail" value="{{mail}}" , placeholder="문의내용" />
           </td>
         </tr>
         <tr>
@@ -36,7 +36,7 @@
           </td>
         </tr>
       </table>
-      <input type="submit" value="문의" method="POST" />
+      <input type="submit" value="제출" method="POST" />
     </form>
   </body>
 </html>
